--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,17 @@
 default: &default
-  adapter: sqlite3
-  pool: 5
+  adapter: postgresql
+  encoding: unicode
+  database: michaeldawson
+  pool: 25
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: michaeldawson_test
 
 production:
-  adapter: mysql2
-  database: michaeldawson
-  username: <%= ENV['DATABASE_USER'] %>
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  <<: *default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
