--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@react95/clippy": "^1.0.5",
+    "@react95/core": "^3.0.7",
+    "@react95/icons": "^2.0.4",
+    "@use-it/interval": "^1.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-google-analytics": "^3.2.0",
     "gatsby-plugin-image": "^1.2.1",
-    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
-    "gatsby-source-filesystem": "^3.2.0",
-    "gatsby-transformer-remark": "^3.2.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "uuid": "^8.3.2"
   }
 }
