Add history navigation, make some tweaks

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react95/clippy": "^1.0.5",
     "@react95/core": "^3.0.7",
     "@react95/icons": "^2.0.4",
+    "@types/history": "^4.7.9",
     "@use-it/interval": "^1.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.2.1",
@@ -31,6 +32,7 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.2.0",
+    "history": "^5.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
