--- a/package.json
+++ b/package.json
@@ -15,26 +15,28 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.1.3",
     "@react95/clippy": "^1.0.5",
     "@react95/core": "^3.0.7",
     "@react95/icons": "^2.0.4",
     "@types/history": "^4.7.9",
     "@use-it/interval": "^1.0.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "gatsby": "^3.2.1",
-    "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-gatsby-cloud": "^4.24.0-next.0",
     "gatsby-plugin-google-analytics": "^3.2.0",
     "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-mdx": "^4.1.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
-    "gatsby-source-filesystem": "^3.14.0",
-    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-source-filesystem": "^4.22.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-countup": "^6.3.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.2.3",
