--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^4.0.0",
     "gatsby-plugin-gatsby-cloud": "^4.24.0-next.0",
     "gatsby-plugin-google-analytics": "^3.2.0",
+    "gatsby-plugin-google-gtag": "^4.23.0",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-mdx": "^4.1.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
