--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "deploy": "yarn build && firebase deploy"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "dependencies": {
     "@mdx-js/react": "^2.1.3",
@@ -35,6 +35,7 @@
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-mdx": "^4.1.1",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sass": "^6.14.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
@@ -46,6 +47,7 @@
     "react-countup": "^6.3.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "sass": "^1.82.0",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2"
   },
