--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "yarn build && firebase deploy"
+    "deploy": "npm run build && firebase deploy"
   },
   "engines": {
     "node": "18"
